# ml-lab

./: .gitignore  00_langchain_core_concepts.ipynb  dspy_prompt_optimization.ipynb  lang_graph.ipynb  pydantic.ipynb  pyproject.toml  rag.ipynb  tf-idf.ipynb  tfidf_rag.ipynb
data/dspy_modules/: jobdetail.json
data/dspy_modules/jobdetail/: program.pkl
design-patterns/: README.md
