[project]
name = "ml-lab"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Lucas Verneck", email = "49991581+lpverneck@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dspy>=2.6.27",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
