[project]
name = "ml-lab"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Lucas Verneck", email = "49991581+lpverneck@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dspy>=2.6.27",
    "langchain-openai>=0.3.29",
    "langgraph>=0.6.1",
    "mlflow>=3.1.4",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
